made alt-text and variable to fill

--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -100,7 +100,7 @@
             <img
             class="h-48"
             src="{{ .image }}"
-			alt="Sunset in the mountains"
+	    		alt="{{ .alt }}"
 			style="object-fit:cover;"
             />            
           </a>         
